--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1761,14 +1761,14 @@
                     <div class="form-group">
                         <input type="text" class="form-control" formControlName="email" placeholder="Username or Email">
                         <div *ngIf="logValid.email.touched && logValid.email.invalid" class="alert alert-danger">
-                            Email is Required
+                            <!-- Email is Required -->
                         </div>
                     </div>
 
                     <div class="form-group">
                         <input type="password" class="form-control" formControlName="password" placeholder="Password">
                         <div *ngIf="logValid.password.touched && logValid.password.invalid" class="alert alert-danger">
-                            Password is Required
+                            <!-- Password is Required -->
                         </div>
                     </div>
                     <!-- <div class="checkbox">
@@ -2072,7 +2072,7 @@
                                     <input type="text" class="form-control" formControlName="name" placeholder="Name">
                                     <div *ngIf="studValid.name.touched && studValid.name.invalid"
                                         class="alert alert-danger">
-                                        Name is Required
+                                        <!-- Name is Required -->
                                     </div>
                                 </div>
 
@@ -2082,7 +2082,7 @@
                                         placeholder="Email">
                                     <div *ngIf="studValid.email.touched && studValid.email.invalid"
                                         class="alert alert-danger">
-                                        Email is Required
+                                        <!-- Email is Required -->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -2091,7 +2091,7 @@
                                         maxlength="10" (keypress)="_keyPress($event)" placeholder="Contact Number">
                                     <div *ngIf="studValid.mobile.touched && studValid.mobile.invalid"
                                         class="alert alert-danger">
-                                        Contact Number is Required
+                                        <!-- Contact Number is Required -->
                                     </div>
                                 </div>
 
@@ -2102,7 +2102,7 @@
                                         placeholder="Username">
                                     <div *ngIf="studValid.user_name.touched && studValid.user_name.invalid"
                                         class="alert alert-danger">
-                                        UserName is Required
+                                        <!-- UserName is Required -->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -2111,7 +2111,7 @@
                                         placeholder="Password">
                                     <div *ngIf="studValid.password.touched && studValid.password.invalid"
                                         class="alert alert-danger">
-                                        Password is Required
+                                        <!-- Password is Required -->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -2120,7 +2120,7 @@
                                         placeholder="Confirm Password">
                                     <div *ngIf="studValid.con_password.touched && studValid.con_password.invalid"
                                         class="alert alert-danger">
-                                        Confirm Password is Required
+                                        <!-- Confirm Password is Required -->
                                     </div>
                                 </div>
 
@@ -2188,7 +2188,7 @@
                                     <input type="text" class="form-control" formControlName="name" placeholder="Name">
                                     <div *ngIf="engValid.name.touched && engValid.name.invalid"
                                         class="alert alert-danger">
-                                        Name is Required
+                                        <!-- Name is Required -->
                                     </div>
                                 </div>
 
@@ -2198,7 +2198,7 @@
                                         placeholder="Email">
                                     <div *ngIf="engValid.email.touched && engValid.email.invalid"
                                         class="alert alert-danger">
-                                        Email is Required
+                                        <!-- Email is Required -->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -2207,7 +2207,7 @@
                                         maxlength="10" (keypress)="_keyPress($event)" placeholder="Contact Number">
                                     <div *ngIf="engValid.mobile.touched && engValid.mobile.invalid"
                                         class="alert alert-danger">
-                                        Contact Number is Required
+                                        <!-- Contact Number is Required -->
                                     </div>
                                 </div>
 
@@ -2217,7 +2217,7 @@
                                         placeholder="UserName">
                                     <div *ngIf="engValid.user_name.touched && engValid.user_name.invalid"
                                         class="alert alert-danger">
-                                        UserName is Required
+                                        <!-- UserName is Required -->
                                     </div>
 
                                 </div>
@@ -2227,7 +2227,7 @@
                                         placeholder="Password">
                                     <div *ngIf="engValid.password.touched && engValid.password.invalid"
                                         class="alert alert-danger">
-                                        Password is Required
+                                        <!-- Password is Required -->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -2236,7 +2236,7 @@
                                         placeholder="Confirm Password">
                                     <div *ngIf="engValid.con_password.touched && engValid.con_password.invalid"
                                         class="alert alert-danger">
-                                        Confirm Password is Required
+                                        <!-- Confirm Password is Required -->
                                     </div>
                                 </div>
 
