--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -393,7 +393,7 @@ ul li a:hover + .hidden, .hidden:hover {
 }
 .custom-ss-footer {
   background: #7d7d7d;
-  padding: 25px;
+  padding: 45px;
   background-size: cover;
 }
 
@@ -844,7 +844,18 @@ ul.login-btn {
     top: 3px;
     color: white;
 }
-  
+.custom-ss-download-broucher-btn {
+  background-image: linear-gradient(to right, #3a0aa3, #7a11ce);
+  color: #fff;
+  box-shadow: 0px 7px 18px -6px rgba(0, 0, 0, 0.75);
+  padding: 5px;
+  cursor: pointer;
+  margin: auto;
+  display: block;
+  border: 0;
+  outline: 0;
+  height: 34px;
+}
 
 @media only screen and (min-width: 799px) and (max-width: 960px) {}
 
