--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -187,7 +187,7 @@
                 <div class="col-md-3 custom-ss-our-events-block custom-ss-events-info">
                     &nbsp;
                     <div>
-                        <h2>Latest Events</h2>
+                        <h2>Monthly Events</h2>
                         <div class="custom-ss-event-date-info " *ngFor="let data of calenderDataForCalender">
                             <h3>{{data.technology}}</h3>
                             <div class="row">
@@ -225,14 +225,15 @@
                                     top: 36px;
                                     left: 28%;">
                                 <div class="btn btn-primary" mwlCalendarPreviousView [view]="view"
-                                    [(viewDate)]="viewDate" (viewDateChange)="activeDayIsOpen = false">
+                                    [(viewDate)]="viewDate" (viewDateChange)="activeDayIsOpen = false"
+                                    (click)="previousMnth(viewDate)">
                                     Previous
                                 </div>
                                 <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">
                                     Today
                                 </div>
                                 <div class="btn btn-primary" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
-                                    (viewDateChange)="activeDayIsOpen = false">
+                                    (viewDateChange)="activeDayIsOpen = false"  (click)="nextMnth(viewDate)">
                                     Next
                                 </div>
                             </div>
@@ -476,14 +477,7 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12 col-sm-12">
-            <button type="button" class="mb-5 mt-5 custom-ss-download-broucher-btn"><i class="fa fa-download"></i>
-                &nbsp;Download Broucher</button>
-        </div>
-    </div>
-</div>
+
 
 <div class="row about-section"
     style=" background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(25, 87, 138, 1) 45%, rgba( 25, 87, 138, 1) 100%), url(./assets/images/aboutbanner.png);">
