--- a/src/styles.css
+++ b/src/styles.css
@@ -372,7 +372,9 @@ width: 85%;
 .cal-month-view .cal-day-badge{
     background-color:#2c668a !important;
 }
-
+.red{
+    color: red;
+}
       /***************mediaquaries*********/
 @media screen and (min-width:120px)and (max-width:319px) {}
 
